--- a/core-interaction/site interface/map.html
+++ b/core-interaction/site interface/map.html
@@ -23,7 +23,7 @@
           <li id="blue"><a href="https://cf-media.sndcdn.com/nmKdgEznXHuX.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vbm1LZGdFem5YSHVYLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE1MjU5MDI2ODJ9fX1dfQ__&Signature=y3bIW8DYVtTF9gAYll1h9dMquS6K2ggHXH5jlWkEQHndF8pP~Mu3Nh8cN7yZqsEZLYnhImaS5hgIlOzIri-S2lJwYkETtmTr4wiVvvYrHQSVIHSEXuhr~p5gjFoiqtspa-0OOEy6KTX5-UmJqzIREY1MSe-aKY60SxPQlzR6zG75P54nlJMzkSK~FhOqB6YhGoKWxjFtFcbScM8Vwh~foTiEwZ0V1l2UNlvlMCi~I7EmXfcCYwr3lPaywDc6GyD0MrfIpwYa2gzadZpmUk-AQEBrsFdAcK0OENRt8AcfClfI~i7mflgixtOLzih4XCSUuD67TcWGK3cdOQ5HJrrfkQ__&Key-Pair-Id=APKAJAGZ7VMH2PFPW6UQ">Blue</a></li>
           <li id="purple"><a href="https://cf-media.sndcdn.com/DSVkv8iVis1B.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vRFNWa3Y4aVZpczFCLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE1MjU5MDI3NTh9fX1dfQ__&Signature=R2WCI7xkZUY6Z-DUxD-8xOOWvMMofjQr2C1sUL9pN6PhA~vlHlFrk1o7sYyNHgnmLoIx5zeT6iWD-~BSsydC8DO9JYhSj2F92ZPQSbO9bDOFpAW2vo-B1zZlRIWSbsyymRW~UqGAlxqjG9~QbYxku3j-f5sLE12c0lbbrnXNHZghfv0GoTJ-Bs4ZlhvsZFcgwAa6mgWWGsIqE1pzTIRLzMTM3v4SsKg1sFaTL1pnqwT11VqjJP66x129BStpRVLV~xUG9ZZiEl59PmrFC~LS0KEOZZQMExu-DOAsfjzn0xKxJDsu60lItb5-iHjUkLZZkRRPamwXXb3G1TIzUugcHw__&Key-Pair-Id=APKAJAGZ7VMH2PFPW6UQ">Purple</a></li>
           <li id="brown"><a href="https://cf-media.sndcdn.com/sDDGvrmDg2ZN.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vc0RER3ZybURnMlpOLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE1MjU5MDI3MjZ9fX1dfQ__&Signature=WakMU0ONQ2jZlbHl6L~-WUQ1zPpW4FSB6JBHAFXuABgNNznRK1KIfLT49c7Gv-~j3mzKYnCgBhiTKvonR-NUx9WcfWv78fDj8RJrB1qxyFchiytH6KCK-r43MRr9dn68QrqdLuG7TicUyEZfbffLEwMeKayqjRahKsOIYDz4pf46TiPlzXoT2Ron4XWJimtGGZyVNnmCUM8r~2j1ow3tcmBmR0OlOOjzu0sQpGzJZzxK5EqEIdhptBREy2wMDetWEkNCvW~nS3DFHrplUuFsZsNshlYdsarFWIA128WQEH3QqVEsaGv~REUhJwLFwjg8LZKrQiGWpwjlUltjcMs7ow__&Key-Pair-Id=APKAJAGZ7VMH2PFPW6UQ">Brown</a></li>
-          <li id="pink"><a href="https://cf-media.sndcdn.com/9qmkl6FIUMmi.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vOXFta2w2RklVTW1pLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE1MjU5MDI3OTN9fX1dfQ__&Signature=EV9aNRsBilKmyW8Q7Z1ED2T~I8vGEk4jbL~G5xrDtPl-5XCK2XhaSDVdjfEon0WmGJLuj8bpC01e2ZIb6nZFvVPHVxnDk4PGjsZPke7MdhE-Ws738FO1PsFa8bZmFknjAaSAcv7iRfQGDKV3b1yals~Tnp1hdFdVAoeWB8G4snzAKRXTGF6htRNwG8avcKTjJbzr8JMA~dezvDzbYWAsu9iDbpiaEasqzvQngMW~vUAN3esIDuqOrNL-8FZj94N9-QRLBFd064uO0Y4uGEH6jzP81C5OQRXFchkgYNDxj5imXA~QtA-nIdhTocvf~t19dW8LwaGeU7fdifxJsNlBOg__&Key-Pair-Id=APKAJAGZ7VMH2PFPW6UQ">Pink</a></li>
+          <li id="pink"><a href="1.mp3">Pink</a></li>
       </ul>
     <style>
       /* Always set the map height explicitly to define the size of the div
@@ -119,7 +119,9 @@
             console.log("red")
             document.body.style.backgroundColor ="red"
             document.getElementById("red").style.visibility="visible"
-        }
+            document.getElementById("audio").style.visibility="visible"
+            document.getElementById("playlist").style.visibility="visible"
+       }
         if (position.coords.longitude< -73.997051
           && position.coords.longitude> -73.995703
           && position.coords.latitude<40.731363
@@ -127,6 +129,8 @@
             console.log("orange")
             document.body.style.backgroundColor ="orange"
             document.getElementById("orange").style.visibility="visible"
+            document.getElementById("audio").style.visibility="visible"
+            document.getElementById("playlist").style.visibility="visible"
         }
         if (position.coords.longitude< -73.996138
           && position.coords.longitude> -73.995703
@@ -135,6 +139,8 @@
             console.log("yellow")
             document.body.style.backgroundColor ="yellow"
             document.getElementById("yellow").style.visibility="visible"
+            document.getElementById("audio").style.visibility="visible"
+            document.getElementById("playlist").style.visibility="visible"
         }
             if (position.coords.longitude> -73.996138
               && position.coords.longitude< -73.996636
@@ -143,6 +149,8 @@
                 console.log("green")
                 document.body.style.backgroundColor ="green"
                 document.getElementById("green").style.visibility="visible"
+                document.getElementById("audio").style.visibility="visible"
+                document.getElementById("playlist").style.visibility="visible"
         }
         if (position.coords.longitude< -73.998073
           && position.coords.longitude> -73.996636
@@ -151,6 +159,8 @@
             console.log("blue")
             document.body.style.backgroundColor ="blue"
             document.getElementById("blue").style.visibility="visible"
+            document.getElementById("audio").style.visibility="visible"
+            document.getElementById("playlist").style.visibility="visible"
     }
     if (position.coords.longitude> -73.998073
       && position.coords.longitude< -73.999558
@@ -159,6 +169,8 @@
         console.log("purple")
         document.body.style.backgroundColor ="purple"
         document.getElementById("purple").style.visibility="visible"
+        document.getElementById("audio").style.visibility="visible"
+        document.getElementById("playlist").style.visibility="visible"
 }
 
 if (position.coords.longitude> -73.998611
@@ -168,12 +180,17 @@ if (position.coords.longitude> -73.998611
     console.log("brown")
     document.body.style.backgroundColor ="brown"
     document.getElementById("brown").style.visibility="visible"
+    document.getElementById("audio").style.visibility="visible"
+    document.getElementById("playlist").style.visibility="visible"
 }
 
         else {
           console.log("blue")
             document.body.style.backgroundColor ="pink"
             document.getElementById("pink").style.visibility="visible"
+            document.getElementById("audio").style.visibility="visible"
+            document.getElementById("audio").style.visibility="visible"
+            document.getElementById("playlist").style.visibility="visible"
         }
       }
 
