--- a/core-interaction/site interface/map.html
+++ b/core-interaction/site interface/map.html
@@ -22,7 +22,7 @@
           <li id="green"><a href="https://cf-media.sndcdn.com/yt5MlvEUIRhJ.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20veXQ1TWx2RVVJUmhKLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE1MjU5MDI0MTl9fX1dfQ__&Signature=Vq76OoxybZNUb3Ghyncl3KHuuSZm-aREkUzo9-TlCkAwMxWFnAVLW8E1czjdonDnaKWH~hYaYWv443Rxq7kCAnRPtGNFHcGrcoOV8bCQ1fDdHtTKjcUROioCn3XPMoJdN4bBZocXj9jQ98kKkK5XKDb-7OlDbgqdtzJKmv-lYs1mQVT7AakY6FMtO~~pxKbdH3sZ0POgucxoNJfEfGvXTuftjQa3rOtNsH5khNfx3sMrdgu7M1Em4S0xHt~HqbMX-UgRVZ1bByuzmvMJyJU4ggJkyjcqSfmIy1jYplnhR3WxujGb5gStF5G7dicXi52Inw9WxrVah7xlxcgPizyTog__&Key-Pair-Id=APKAJAGZ7VMH2PFPW6UQ">Green</a></li>
           <li id="blue"><a href="https://cf-media.sndcdn.com/nmKdgEznXHuX.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vbm1LZGdFem5YSHVYLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE1MjU5MDI2ODJ9fX1dfQ__&Signature=y3bIW8DYVtTF9gAYll1h9dMquS6K2ggHXH5jlWkEQHndF8pP~Mu3Nh8cN7yZqsEZLYnhImaS5hgIlOzIri-S2lJwYkETtmTr4wiVvvYrHQSVIHSEXuhr~p5gjFoiqtspa-0OOEy6KTX5-UmJqzIREY1MSe-aKY60SxPQlzR6zG75P54nlJMzkSK~FhOqB6YhGoKWxjFtFcbScM8Vwh~foTiEwZ0V1l2UNlvlMCi~I7EmXfcCYwr3lPaywDc6GyD0MrfIpwYa2gzadZpmUk-AQEBrsFdAcK0OENRt8AcfClfI~i7mflgixtOLzih4XCSUuD67TcWGK3cdOQ5HJrrfkQ__&Key-Pair-Id=APKAJAGZ7VMH2PFPW6UQ">Blue</a></li>
           <li id="purple"><a href="https://cf-media.sndcdn.com/DSVkv8iVis1B.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vRFNWa3Y4aVZpczFCLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE1MjU5MDI3NTh9fX1dfQ__&Signature=R2WCI7xkZUY6Z-DUxD-8xOOWvMMofjQr2C1sUL9pN6PhA~vlHlFrk1o7sYyNHgnmLoIx5zeT6iWD-~BSsydC8DO9JYhSj2F92ZPQSbO9bDOFpAW2vo-B1zZlRIWSbsyymRW~UqGAlxqjG9~QbYxku3j-f5sLE12c0lbbrnXNHZghfv0GoTJ-Bs4ZlhvsZFcgwAa6mgWWGsIqE1pzTIRLzMTM3v4SsKg1sFaTL1pnqwT11VqjJP66x129BStpRVLV~xUG9ZZiEl59PmrFC~LS0KEOZZQMExu-DOAsfjzn0xKxJDsu60lItb5-iHjUkLZZkRRPamwXXb3G1TIzUugcHw__&Key-Pair-Id=APKAJAGZ7VMH2PFPW6UQ">Purple</a></li>
-          <li id="brown"><a href="https://cf-media.sndcdn.com/sDDGvrmDg2ZN.128.mp3?Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiKjovL2NmLW1lZGlhLnNuZGNkbi5jb20vc0RER3ZybURnMlpOLjEyOC5tcDMiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE1MjU5MDI3MjZ9fX1dfQ__&Signature=WakMU0ONQ2jZlbHl6L~-WUQ1zPpW4FSB6JBHAFXuABgNNznRK1KIfLT49c7Gv-~j3mzKYnCgBhiTKvonR-NUx9WcfWv78fDj8RJrB1qxyFchiytH6KCK-r43MRr9dn68QrqdLuG7TicUyEZfbffLEwMeKayqjRahKsOIYDz4pf46TiPlzXoT2Ron4XWJimtGGZyVNnmCUM8r~2j1ow3tcmBmR0OlOOjzu0sQpGzJZzxK5EqEIdhptBREy2wMDetWEkNCvW~nS3DFHrplUuFsZsNshlYdsarFWIA128WQEH3QqVEsaGv~REUhJwLFwjg8LZKrQiGWpwjlUltjcMs7ow__&Key-Pair-Id=APKAJAGZ7VMH2PFPW6UQ">Brown</a></li>
+          <li id="brown"><a href="2.mp3">Brown</a></li>
           <li id="pink"><a href="1.mp3">Pink</a></li>
       </ul>
     <style>
@@ -122,7 +122,7 @@
             document.getElementById("audio").style.visibility="visible"
             document.getElementById("playlist").style.visibility="visible"
        }
-        if (position.coords.longitude< -73.997051
+        else {position.coords.longitude< -73.997051
           && position.coords.longitude> -73.995703
           && position.coords.latitude<40.731363
           && position.coords.latitude>40.730727){
@@ -142,7 +142,7 @@
             document.getElementById("audio").style.visibility="visible"
             document.getElementById("playlist").style.visibility="visible"
         }
-            if (position.coords.longitude> -73.996138
+            else {position.coords.longitude> -73.996138
               && position.coords.longitude< -73.996636
               && position.coords.latitude<40.730181
               && position.coords.latitude>40.729639){
@@ -151,7 +151,7 @@
                 document.getElementById("green").style.visibility="visible"
                 document.getElementById("audio").style.visibility="visible"
                 document.getElementById("playlist").style.visibility="visible"
-        }
+        }}
         if (position.coords.longitude< -73.998073
           && position.coords.longitude> -73.996636
           && position.coords.latitude<40.730346
@@ -162,17 +162,16 @@
             document.getElementById("audio").style.visibility="visible"
             document.getElementById("playlist").style.visibility="visible"
     }
-    if (position.coords.longitude> -73.998073
+    else{position.coords.longitude> -73.998073
       && position.coords.longitude< -73.999558
-      && position.coords.latitude>40.730346
+      && position.coords.latitude<40.730346
       && position.coords.latitude<40.731079){
         console.log("purple")
         document.body.style.backgroundColor ="purple"
         document.getElementById("purple").style.visibility="visible"
         document.getElementById("audio").style.visibility="visible"
         document.getElementById("playlist").style.visibility="visible"
-}
-
+}}
 if (position.coords.longitude> -73.998611
   && position.coords.longitude< -73.999558
   && position.coords.latitude<40.732122
@@ -182,9 +181,7 @@ if (position.coords.longitude> -73.998611
     document.getElementById("brown").style.visibility="visible"
     document.getElementById("audio").style.visibility="visible"
     document.getElementById("playlist").style.visibility="visible"
-}
-
-        else {
+}        else {
           console.log("blue")
             document.body.style.backgroundColor ="pink"
             document.getElementById("pink").style.visibility="visible"
