--- a/core-interaction/site interface/location.html
+++ b/core-interaction/site interface/location.html
@@ -19,6 +19,10 @@
     display: inline-block;
     position: fixed;
   }
+  body {
+   background-image: url("map.jpg");
+   background-color: #cccccc;
+}
 </style>
 <body>
   <div id="home"><a href="map.html">Home</div>
