--- a/core-interaction/site interface/location.html
+++ b/core-interaction/site interface/location.html
@@ -20,7 +20,7 @@
     position: fixed;
   }
   body {
-   background-image: url("map.jpg");
+   background-image: "map.jpg";
    background-color: #cccccc;
 }
 </style>
