--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -15,9 +15,11 @@
       <p>Suji Kang
         <strong>Class is fun</strong>
       </p>
-      <a href="deepattention1.html">deep attention</a>
-      <a href="hyper.html">hyper attention</a>
+      <a href="attention1/attention1.html">deep attention</a>
+      <a href="attention2/enter.html">hyper attention</a>
       <a href="expanded type/expanded type.html">expanded type</a>
+      <a href="cookie.html">cookie</a>
+      <a href="poster/poster.html">poster</a>
 
 
   </body>
