--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -12,14 +12,14 @@
         href="http://www.google.com">Go to google</a>
         <img src="kitten.jpg"/>
 
-      <p>Suji Kang
-        <strong>Class is fun</strong>
-      </p>
+
       <a href="attention1/attention1.html">deep attention</a>
       <a href="attention2/enter.html">hyper attention</a>
       <a href="expanded type/expanded type.html">expanded type</a>
       <a href="cookie.html">cookie</a>
       <a href="poster/poster.html">poster</a>
+      <a href="">input and output</a>
+      <a href="">three viewport layout</a>
 
 
   </body>
