--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -18,7 +18,7 @@
       <a href="expanded type/expanded type.html">expanded type</a>
       <a href="cookie.html">cookie</a>
       <a href="poster/poster.html">poster</a>
-      <a href="inputoutput.html">input and output</a>
+      <a href="inputoutput/inputoutput.html">input and output</a>
       <a href="">three viewport layout</a>
 
 
