--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -7,20 +7,17 @@
   </head>
 
   <body>
-
-        <a
-        href="http://www.google.com">Go to google</a>
-        <img src="kitten.jpg"/>
-
-
-      <a href="attention1/attention1.html">deep attention</a>
-      <a href="attention2/enter.html">hyper attention</a>
-      <a href="expanded type/expanded type.html">expanded type</a>
-      <a href="cookie.html">cookie</a>
-      <a href="poster/poster.html">poster</a>
-      <a href="inputoutput/inputoutput.html">input and output</a>
-      <a href="April17/April17.html">three viewport layout</a>
-
-
+    <ul><p>Studio</p>
+      <li><a href="attention1/attention1.html">deep attention</a></li>
+      <li><a href="attention2/enter.html">hyper attention</a></li>
+      <li><a href="expanded type/expanded type.html">expanded type</a></li>
+      <li><a href="collection/collection.html">Collection</a></li>
+       <li><a href="site interface/map.html">Site interface</a></li>
+    </ul>
+    <ul><p>Lab</p>
+      <li><a href="cookie.html">cookie</a></li>
+      <li><a href="poster/poster.html">poster</a></li>
+      <li><a href="inputoutput/inputoutput.html">input and output</a></li>
+      <li><a href="April17/April17.html">three viewport layout</a></li>
   </body>
 </html>
