--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>My website</title>
+
     <link rel="stylesheet"
           href="style.css"/>
+          <meta name="viewport" content="width=device-width, initial-scale=1">
           <video autoplay muted id="myVideo">
   <source src="logo.mp4" type="video/mp4">
 </video>
