--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -7,7 +7,7 @@
           href="style.css"/>
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <video autoplay muted id="myVideo">
-  <source src="logo.mp4" type="video/mp4">
+  <source src="logo.mp4" type="video/mp4" width="400px">
 </video>
   </head>
 
@@ -27,6 +27,7 @@
       <li><a href="April17/April17.html">three viewport layout</a></li>
     </ul>
   </div>
+
   </body>
 </script>
 </html>
